Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115774

Crash when trying to adjust axis range in tst_barstest

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.6.0 Beta3, 6.7.0 FF
    • 6.6.0 Beta1
    • Graphs: 3D
    • None
    • e8c9f40e5 (dev), e2b5994d1 (6.6)

      Reproducible in tst_barstest.

      Steps to reproduce:

      • click on Use dynamic data
      • slide one of the 2 first sliders under Adjust data window minimums

      -> crash

       

        For Gerrit Dashboard: QTBUG-115774
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes