Fix crash when trying to access nonexistent labels

Fixes: QTBUG-115774
Change-Id: I07f28424653e341c49be40344f1e2e3cd83928a2
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit e8c9f40e54d886784f9a0fffa4cd311e0e079b20)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>